--- a/package.json
+++ b/package.json
@@ -19,14 +19,17 @@
     "bcrypt": "^5.1.0",
     "next": "13.4.13",
     "next-auth": "^4.23.0",
+    "next-cloudinary": "^4.18.0",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "react-select": "^5.7.4",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "world-countries": "^4.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0"
