--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next-cloudinary": "^4.18.0",
     "postcss": "8.4.27",
     "react": "18.2.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
     "react-hot-toast": "^2.4.1",
@@ -32,6 +33,7 @@
     "world-countries": "^4.0.0"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0"
+    "@types/bcrypt": "^5.0.0",
+    "@types/react-date-range": "^1.4.4"
   }
 }
